# microtensor

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: 1-basic.rs  2-optimizer.rs  3-mlp_eager.rs  4-mlp_graph.rs  5-mlp_layer.rs  6-serialize.rs  basic.rs  graph.rs  optimizer.rs  perceptron_eager.rs  perceptron_graph.rs
src/: internal.rs  lib.rs  ops.rs  optimize.rs  prelude.rs  scalar.rs  shape.rs  tensor.rs  variable.rs
src/tensor/: cops.rs  lops.rs
src/variable/: graph.rs  layer.rs  mops.rs
