[package]
name = "microtensor"
version = "0.1.4"
edition = "2021"
description = "Automatic differentiation for tensor operations"
authors = ["Björn Breitgoff <syntheticore@gmail.com>"]
keywords = ["autograd", "tensor", "ml"]
categories = ["mathematics", "science"]
license = "MIT"
homepage = "https://crates.io/crates/microtensor"
repository = "https://github.com/syntheticore/microtensor"
readme = "README.md"

[dependencies]
rand = "0.7.3"
num-traits = "0.2.15"
itertools = "0.10.5"
serde = { version = "1.0.145", features = ["derive", "rc"] }
serde_traitobject = "0.2.8"
postcard = { version = "1.0.2", features = ["alloc"] }

rayon = { version = "1.5.3", optional = true }
parking_lot = { version = "0.12.1", features = ["serde"], optional = true }

matrixmultiply = { version = "0.3.2", features = ["threading"], optional = true  }

[features]
default = [
  "threading",
  "unsafe",
]

threading = [
  "dep:rayon",
  "dep:parking_lot",
]

unsafe = ["dep:matrixmultiply"]

[profile.dev]
opt-level = 3

[profile.release]
lto = 'fat'
codegen-units = 1
