[package]
name = "microtensor"
version = "0.1.5"
edition = "2021"
description = "Automatic differentiation for tensor operations"
authors = ["Björn Breitgoff <syntheticore@gmail.com>"]
keywords = ["autograd", "tensor", "ml"]
categories = ["mathematics", "science"]
license = "MIT"
homepage = "https://crates.io/crates/microtensor"
repository = "https://github.com/syntheticore/microtensor"
readme = "README.md"

[dependencies]
rand = "0.7.3"
num-traits = "0.2.17"
itertools = "0.12.1"
serde = { version = "1.0.196", features = ["derive", "rc"] }
postcard = { version = "1.0.8", features = ["alloc"] }

parking_lot = { version = "0.12.1", features = ["serde"], optional = true }
matrixmultiply = { version = "0.3.8", features = ["std", "threading"], optional = true  }

[features]
default = [
  "threading",
  "unsafe",
]
threading = ["dep:parking_lot"]
unsafe = ["dep:matrixmultiply"]

[profile.dev]
opt-level = 3
